--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html> 
 <head>
-  <title>My Cafe Game</title>
+  <title>Lollie's Cafe Game</title>
 </head>
 <body></body>
 </html>
