Add start game button to index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 </head>
 <body>
   <h1>Welcome To Lollie's Cafe </h1>
-<p> Can you get all the orders right? in Lollie cafe  </p>
-  
+<p> Can you get all the orders right? in Lollie's cafe  </p>
+ <button> Start Game! </button> 
+</body>
 </html>
  
