Add stylesheet link to index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html> 
 <head>
   <title>Lollie's Cafe Game</title>
+  <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
   <h1>Welcome To Lollie's Cafe </h1>
@@ -9,4 +10,4 @@
  <button> Start Game! </button> 
 </body>
 </html>
- 
+
