--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <!-- Customer Area -->
         <div class="customer-area">
             <div class="customer">
-                <img id="customerImage" src="images/elf-wait.png" alt="Customer" class="customer-img">
+                <img id="customerImage" src="elf-wait.png" alt="Customer" class="customer-img">
                 <h3 id="customerName">Peppermint</h3>
                 <div class="speech-bubble">
                     <p id="customerOrder">Welcome to the cafe!</p>
