--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lollie's Cafe Game</title>
     <link rel="stylesheet" href="style.css">
+    <script src="game.js?v=2" defer></script>
 </head>
 <body>
     <!-- Start Screen -->
@@ -122,6 +123,5 @@
         </div>
     </div>
 
-    <script src="game.js"></script>
-</body>
+    </body>
 </html>
