--- a/index.html
+++ b/index.html
@@ -60,7 +60,15 @@
             </div>
         </div>
 
-        <!-- Customer Area -->
+              <div class="game-layout">
+  <!-- Menu/Items Area (LEFT) -->
+        <div class="counter">
+            <h3 id="counterTitle">What can you make?</h3>
+            <div id="menuItems" class="menu-items">
+                <!-- Items will be added by JavaScript -->
+            </div>
+
+             <!-- Customer Area (RIGHT) -->
         <div class="customer-area">
             <div class="customer">
                 <img id="customerImage" src="elf-wait.png" alt="Customer" class="customer-img">
@@ -70,13 +78,6 @@
                 </div>
             </div>
         </div>
-
-        <!-- Menu/Items Area -->
-        <div class="counter">
-            <h3 id="counterTitle">What can you make?</h3>
-            <div id="menuItems" class="menu-items">
-                <!-- Items will be added by JavaScript -->
-            </div>
             
             <!-- Level 3/4: Order Summary -->
             <div id="orderSummary" class="order-summary hidden">
