adjusted timing of thoughts and poses

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </div>
   </div>
       
-     !-- LEFT: Menu (for Levels 2-4) -->
+     <!-- LEFT: Menu (for Levels 2-4) -->
   <div class="counter">
     <h3 id="counterTitle">Today's Menu</h3>
     <div id="menuItems" class="menu-items"></div>
