staged difficulty lunch rush

--- a/index.html
+++ b/index.html
@@ -196,6 +196,22 @@
     <button onclick="quitToLevelSelect()" class="quit-button" type="button">Quit Level</button>
   </div>
 
+  <!-- Lunch Rush Popup -->
+  <div id="lunchRushPopup" class="math-help-popup hidden">
+    <div class="lunch-rush-content">
+      <h1>🌟 Here Comes the Lunch Rush! 🌟</h1>
+      <p class="lunch-rush-message">
+        Great job on the morning shift!<br>
+        Now things are getting busier...<br>
+        <strong>Orders are bigger and trickier!</strong>
+      </p>
+      <p class="lunch-rush-encouragement">
+        You've got this! 💪☕
+      </p>
+      <button onclick="continueLunchRush()" class="big-button" type="button">Let's Go! 🚀</button>
+    </div>
+  </div>
+
   <!-- Game Over Screen -->
   <div id="gameOverScreen" class="screen hidden">
     <h1>💔 Oh No! 💔</h1>
