--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Lollie's Cafe Game</title>
-<link rel="stylesheet" href="game-styles.css" />
+<link rel="stylesheet" href="style.css?v=99999" />
 <script src="game.js?v=4" defer></script>
 </head>
 
